Fixed additionalGroup primaryText support for overflow

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -274,11 +274,6 @@ svg {
   width: 48px;
 }
 
-.MuiChip-label {
-  font-family: "Segoe UI Web (West European)", -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
-  font-size: 11px;
-}
-
 .organization .ms-Card {
   min-width: 100px !important;
 }
